<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutDirection="ltr"

        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
             android:orientation="horizontal"
            android:layoutDirection="ltr"

            android:background="@drawable/reqtangle_corn_blue"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youmustlogin"
            android:textSize="22sp"
              android:padding="15dp"
            android:textColor="@color/hj_color_blue"
            android:drawablePadding="5dp"

            />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="25dp"

                android:src="@drawable/questionmark"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="15dp"
            android:layoutDirection="ltr"

            android:layout_marginTop="10dp"
             android:background="@drawable/reqtangle_corn_grey"
            android:text="@string/areyour_wantlogin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"

            android:orientation="horizontal"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/yess"
                android:text="@string/ok"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/noo"
                android:text="@string/cancel"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:textSize="20sp"
                />


        </LinearLayout>


    </LinearLayout>



</LinearLayout>