<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/lss"
        android:layoutDirection="ltr"

        android:background="@color/hj_color_view_background">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:alpha="1.0"
            android:background="@color/hj_color_view_background">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/radioGroupParent"
                    android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/backbtn"
                        android:background="@null"
                        android:src="@mipmap/back"
                        android:layout_alignParentLeft="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/backbtn"
                        android:id="@+id/fav_title"
                        android:text="@string/myads"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:textSize="23sp"
                        android:textColor="@color/white"
                         />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/delete_fav"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:visibility="invisible"
                        android:src="@mipmap/delete"
                        />

                </RelativeLayout>
            </FrameLayout>
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/user_details"
        android:layoutDirection="ltr"

        android:layout_below="@+id/lss"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="left|center_vertical"
                android:layout_weight="1"
                android:id="@+id/linevaluate"
                android:layout_marginTop="15dp"
                 android:layout_marginLeft="15dp"

                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/likk"


                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/evalutae_user"
                android:textColor="#059de9"
                 android:layout_marginLeft="10dp"
                 android:text="@string/evaluate"

                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:id="@+id/user_name"
                android:text="@string/username"
                android:textColor="@color/black"
                android:paddingRight="10dp"
                />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/checking"
                    android:visibility="invisible"
                    android:id="@+id/check_mark"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/online"
                android:background="@drawable/onlineshape"
                android:text="@string/online"
                  android:paddingLeft="10dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/white"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/special_user"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
             android:layout_marginRight="15dp"
            android:text="@string/special_user"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"

            android:layout_marginTop="10dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:visibility="gone"
                android:gravity="center_vertical"
                >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
             android:layout_marginLeft="15dp"
            android:text="@string/follow"
            android:visibility="gone"

            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/subscribe"
            android:layout_marginLeft="10dp"
            android:visibility="gone"

            />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/messageLinear"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:layoutDirection="ltr"
                 android:paddingRight="15dp">

                <TextView
                    android:id="@+id/adEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="مراسلة"
                    android:textStyle="bold"
                    android:textColor="#059de9" />

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:src="@drawable/maill" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day"
                android:id="@+id/created_at"
                android:layout_marginRight="20dp"
                />


    </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ads_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details"
        android:layoutDirection="ltr"

        tools:listitem="@layout/ads_row_layout" />


</RelativeLayout>